fix story-meta spacing (byline)

--- a/sass/modules/_story-meta.scss
+++ b/sass/modules/_story-meta.scss
@@ -1,7 +1,7 @@
 .story-meta {
   position: relative;
-  padding-top: .5em;
-  padding-bottom: .3em;
+  padding-top: .4em;
+  padding-bottom: .4em;
   border-top: 1px solid $lightgray;
   border-bottom: 1px solid $lightgray;
   font-size: .9em;
